# python-project-50

./: .coverage  .gitignore  Makefile  README.md  SSH key  SSH key.pub  coverage.xml  gendiff.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: README.md  build.yml  check.yml  hexlet-check.yml  main.yml  pyci.yml  sonarcloud.yml
gendiff/: __init__.py  diff.py
gendiff/formatters/: __init__.py  json_format.py  plain.py  stylish.py
gendiff/scripts/: diff.py  gendiff.py
gendiff/tests/: test_gendiff.py  test_json.py  test_plain.py
src/gendiff/: __init__.py  diff.py
src/gendiff/formatters/: __init__.py  plain.py  stylish.py
src/gendiff/scripts/: gendiff.py
src/hexlet_code/: __init__.py  diff_builder.py  gendiff.py  main.py
src/hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/hexlet_code/formatters/: plain.py  stylish.py
src/hexlet_code/parser/: parse_args.py  parse_read.py
tests/: test_gendiff.py  test_gendiff_yaml.py  test_json.py  test_plain.py
tests/test_data/: expected_plain.txt
