[project]
name = "hexlet-code"
version = "0.1.0"
description = "Example application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.8"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"